--- a/Lab5/Parser/Parser.csproj
+++ b/Lab5/Parser/Parser.csproj
@@ -39,7 +39,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Grammar.cs" />
+    <Compile Include="Item.cs" />
+    <Compile Include="Parser.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="State.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
